[package]
name = "hidden-vnc"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_StationsAndDesktops",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_ToolHelp"
] }
image = "0.24"
chrono = "0.4"
anyhow = "1.0"
